<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                style="@style/CapsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/trip_service_info_train_number_label" />

            <TextView
                style="@style/CapsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/trip_service_info_user_name" />

            <TextView
                android:id="@+id/boardingStatus"
                style="@style/CapsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                tools:text="@string/trip_service_info_boarding_status_started" />

            <TextView
                style="@style/CapsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_service_info_next_station" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trainNumberAndDate"
                style="@style/CapsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                tools:text="@string/trip_service_info_no_data"
                tools:textColor="@color/defaultRed" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/defaultGreen"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Иванов И.И." />

            <TextView
                android:id="@+id/controlStation"
                style="@style/CapsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/defaultGreen"
                android:textStyle="bold"
                tools:text="Москва Киевская" />

            <TextView
                android:id="@+id/nextStation"
                style="@style/CapsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/defaultGreen"
                android:textStyle="bold"
                tools:text="НАРА" />

        </LinearLayout>

    </LinearLayout>

</merge>