<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_status_bar" />

    <include layout="@layout/include_trip_service_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            style="@style/CapsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/set_user_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/set_user_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLength="35"
            android:maxLines="1">

            <requestFocus />
        </EditText>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ru.ppr.core.ui.widget.SingleClickButton
            android:id="@+id/done"
            style="@style/Core.App.Widget.Button.Gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_user_done" />

    </LinearLayout>

</LinearLayout>